<resources>
    <string name="app_name">Gluguard</string>
    <string name="title_activity_launcher">Gluconnect</string>
    <string name="title_activity_register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="account_register_message">Don\'t have an account? Register</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="more_information_message">For a more personalized experience kindly provide the following information</string>
    <string name="username">Username</string>
    <string name="dob">Date of birth</string>
    <string name="weight">Weight (kgs)</string>
    <string name="height">Height (cm)</string>
    <string name="save_and_proceed_btn">SAVE AND PROCEED</string>
    <string name="title_activity_daily_logs">DailyLogsActivity</string>
    <string name="search_food_item">Search Food Item</string>
    <string name="login">Login</string>

    <!--    Bottom navigation bar -->
    <string name="title_diary">Diary</string>
    <string name="title_analytics">Trends</string>
    <string name="title_record">Log</string>
    <string name="title_tips">Tips</string>
    <string name="title_details">Profile</string>

    <string-array name="exercises_array">
        <item>Walking</item>
        <item>Jogging</item>
        <item>Running</item>
    </string-array>

    <string-array name="bg_array">
        <item>fasting</item>
        <item>before meal</item>
        <item>after meal</item>
        <item>at night</item>
    </string-array>

    <string-array name="medicine_array">
        <item>Humalog</item>
        <item>Fiasp</item>
        <item>Gensulin N</item>

        <item>Lispro</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="meal_array">
        <item>Breakfast</item>
        <item>Snack</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string-array name="activity_level_array">
        <item>Sedimentary</item>
        <item>Lightly Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extra Active</item>
    </string-array>

    <string-array name="hospital_array">
        <item>Aga khan Hospital</item>
        <item>Nairobi Hospital</item>
        <item>Kenyatta National Hospital</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
