<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/diary_icon"
        android:icon="@drawable/diary_icon"
        android:title="@string/title_diary"
        />
    <item
        android:id="@+id/analytics_icon"
        android:icon="@drawable/analytics_icon"
        android:title="@string/title_analytics"/>
    <item
        android:id="@+id/record_icon"
        android:icon="@drawable/daily_log_icon"
        android:title="@string/title_record"/>
    <item
        android:id="@+id/tips_icon"
        android:icon="@drawable/tips_icon"
        android:title="@string/title_tips"/>
    <item
        android:id="@+id/profile_details_icon"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_details"/>

</menu>