<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RegisterActivity">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

  </com.google.android.material.appbar.AppBarLayout>

  <include layout="@layout/content_register" />

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:popupTheme="@style/AppTheme.PopupOverlay" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/signup_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="160dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/email"
      app:layout_constraintEnd_toEndOf="@+id/toolbar"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/toolbar"
      app:layout_constraintTop_toBottomOf="@+id/toolbar" >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/signup_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/password"
      app:layout_constraintEnd_toEndOf="@+id/signup_email"
      app:layout_constraintStart_toStartOf="@+id/signup_email"
      app:layout_constraintTop_toBottomOf="@+id/signup_email" >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/signup_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="16dp"
      android:text="@string/sign_up"
      android:onClick="openDetailsActivity"
      android:backgroundTint="#ed2648"
      android:background="@drawable/rounded_corners"
      app:layout_constraintEnd_toEndOf="@+id/signup_password"
      app:layout_constraintStart_toStartOf="@+id/signup_password"
      app:layout_constraintTop_toBottomOf="@+id/signup_password" />



</androidx.constraintlayout.widget.ConstraintLayout>